--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="top-container">
-    <img  class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img  class="top-cloud" src="cloud.png" alt="cloud-img">
     <h1>I'm Dhanashree.</h1>
     <h2>a programmer </h2> 
 
