--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <h2>a programmer </h2> 
 
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img src="mountain.png" alt="mountain-img">
   </div>
     
     <div class="middle-container">
         <div class="profile">
-          <img class="profile "src="images/profile_pic.jpg" alt="profile_pic">
+          <img class="profile "src="profile_pic.jpg" alt="profile_pic">
           <h2>Hello there!!</h2>
           <p class="intro"> An enthusiastic learner in search of a good quality industrial experience which will be beneficial to achieve personal as well as organizational goals</p>
         </div>
