--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>I'm Dhanashree.</h1>
     <h2>a programmer </h2> 
 
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
     <img src="mountain.png" alt="mountain-img">
   </div>
     
